Fixed icon alignment

--- a/src/less/global.less
+++ b/src/less/global.less
@@ -79,6 +79,7 @@ body {
     height: 100vh;
     box-sizing: border-box;
     padding: 5vh 5vw;
+
     &.align-left {
         justify-content: flex-start;
     }
@@ -90,4 +91,12 @@ body {
 
 #password-input + div > hr:nth-child(2) {
     transition: border-color 1.3s !important;
+}
+
+.fa {
+    &:before {
+        width: 1.285714em;
+        text-align: center;
+        display: inline-block;
+    }
 }
